L3: 3.5.1 este implementata